- Shapes and lines drawed with guide - Panel added

--- a/preview/index.html
+++ b/preview/index.html
@@ -8,6 +8,8 @@
     <title></title>
 </head>
 <body>
+
+<div style="height: 2550px;"></div>
 <script src="../dist/main.min.js"></script>
 </body>
 </html>
